src/main/default/objects/Contact/fields/Duplicate_Check_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Check Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Duplicate Check Candidate)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>