src/main/default/objects/Contact/fields/Duplicate_Check_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Confidence__c</fullName>
    <label>Duplicate Check Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>